--- a/Akad_Creative_Digital_Agency_Template/Akad_Creative_Digital_Agency_Template/index.html
+++ b/Akad_Creative_Digital_Agency_Template/Akad_Creative_Digital_Agency_Template/index.html
@@ -21,8 +21,8 @@
 	<!-- HEADER  -->
 	<header class="main-header">
 		<div class="container">
-			<div class="logo">
-				<a href="index.html"><img src="assets/img/logo.png" alt="logo"></a>
+			<div class="logo" id="vfx-main-logo">
+				<a href="index.html"><img src="assets/img/Vir2al-FX-weiß.png" alt="logo"></a>
 			</div>
 
 			<div class="menu">
@@ -63,18 +63,14 @@
 	<div class="site-hero">
 		<ul class="slides">
 			<li>
-				<div><span class="small-title uppercase montserrat-text">we're</span></div>
-				<div class="big-title uppercase montserrat-text">digital agency</div>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua.</p>
+				<div><span class="small-title uppercase montserrat-text">wichtig:</span></div>
+				<div class="big-title uppercase montserrat-text">Homepage Relaunch</div>
+				<p>Wir arbeiten momentan noch an unserer neuen Homepage. Keine Sorge, wir bleiben trotzdem jederzeit erreichbar! All unsere Kommunikationskanäle sind unten verlinkt!</p>
 			</li>
 			<li>
-				<div><span class="small-title uppercase montserrat-text">we do</span></div>
-				<div class="big-title uppercase montserrat-text">creative stuff</div>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. </p>
+				<div><span class="small-title uppercase montserrat-text">bis dahin:</span></div>
+				<div class="big-title uppercase montserrat-text">Stay Tuned!</div>
+				<p>Folge unseren Social-Media-Accounts um zu erfahren wann es soweit ist und kein wichtiges Update zu verpassen! </p>
 			</li>
 		</ul>
 	</div>
@@ -100,7 +96,7 @@
 						consequat. in reprehenderit in voluptate velit esse
 						cillum dolore eu fugiat nulla pariatur. 
 					</p>
-					<a href="#" class="btn green" style="float:right;margin-top:30px"><span>read more</span></a>
+					<a href="#" class="btn red" style="float:right;margin-top:30px"><span>read more</span></a>
 				</div>
 			</div>
 		</div>
@@ -352,20 +348,20 @@
 	<!-- portfolio -->
 
 	<!-- newsletter -->
-	<section class="green-section wow fadeInUp" style="padding:50px 0">
+	<section class="red-section wow fadeInUp" style="padding:50px 0">
 		<div class="container">
 			<div class="col-md-6 col-sm-12">
 				<div class="row">
 					<span class="white-text montserrat-text uppercase" style="font-size:30px;display:block;">
 						you think we're cool? let's work together
 					</span>
-					<a href="#" class="btn white" style="margin-top:30px"><span>get in touch</span></a>
+					<a href="#" class="btn black" style="margin-top:30px"><span>get in touch</span></a>
 				</div>
 			</div>
 
 			<div class="col-md-6 col-sm-12">
 				<div class="row">
-					<div class="white-section" style="padding:20px">
+					<div class="Black-section" style="padding:20px">
 						<span class="montserrat-text uppercase" style="font-size:24px">stay informed with our newsletter</span>
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -376,7 +372,7 @@
 								<input type="text" name="email">
 								<span>your email</span>
 							</div>
-							<button type="submit" class="btn green" style="margin-top:20px"><span>send</span></button>
+							<button type="submit" class="btn red" style="margin-top:20px"><span>send</span></button>
 						</form>
 					</div>
 				</div>
