--- a/Akad_Creative_Digital_Agency_Template/Akad_Creative_Digital_Agency_Template/single-project-2.html
+++ b/Akad_Creative_Digital_Agency_Template/Akad_Creative_Digital_Agency_Template/single-project-2.html
@@ -175,7 +175,7 @@
 				<p class="italic" style="float:left;line-height:50px;margin:0">
 					Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
 				</p>
-				<a href="" class="btn green" style="float:right"><span>read more</span></a>
+				<a href="" class="btn red" style="float:right"><span>read more</span></a>
 			</div>
 		</div>
 	</div>
@@ -183,20 +183,20 @@
 
 
 	<!-- newsletter -->
-	<section class="green-section wow fadeInUp" style="padding:50px 0">
+	<section class="red-section wow fadeInUp" style="padding:50px 0">
 		<div class="container">
 			<div class="col-md-6 col-sm-12">
 				<div class="row">
 					<span class="white-text montserrat-text uppercase" style="font-size:30px;display:block;">
 						you think we're cool? let's work together
 					</span>
-					<a href="#" class="btn white" style="margin-top:30px"><span>get in touch</span></a>
+					<a href="#" class="btn black" style="margin-top:30px"><span>get in touch</span></a>
 				</div>
 			</div>
 
 			<div class="col-md-6 col-sm-12">
 				<div class="row">
-					<div class="white-section" style="padding:20px">
+					<div class="Black-section" style="padding:20px">
 						<span class="montserrat-text uppercase" style="font-size:24px">stay informed with our newsletter</span>
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -207,7 +207,7 @@
 								<input type="text" name="email">
 								<span>your email</span>
 							</div>
-							<button type="submit" class="btn green" style="margin-top:20px"><span>send</span></button>
+							<button type="submit" class="btn red" style="margin-top:20px"><span>send</span></button>
 						</form>
 					</div>
 				</div>
