-hero final, usp/about, studio, contact, social-

--- a/Akad_Creative_Digital_Agency_Template/Akad_Creative_Digital_Agency_Template/about.html
+++ b/Akad_Creative_Digital_Agency_Template/Akad_Creative_Digital_Agency_Template/about.html
@@ -60,8 +60,8 @@
 	<!-- HERO SECTION  -->
 	<div class="site-hero_2">
 		<div class="page-title">
-			<div class="big-title montserrat-text uppercase">about us</div>
-			<div class="small-title montserrat-text uppercase">home / about</div>
+			<div class="big-title poppins-text uppercase">about us</div>
+			<div class="small-title poppins-text uppercase">home / about</div>
 		</div>
 	</div>
 
@@ -71,7 +71,7 @@
 				<div class="col-md-6">
 					<div class="section-title" style="text-align:left;float:left;width:100%;margin-bottom:0">
 						<span>about us</span>
-						<p class="montserrat-text uppercase">we are awesome</p>
+						<p class="poppins-text uppercase">we are awesome</p>
 					</div>
 
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -84,7 +84,7 @@
 				<div class="col-md-6">
 					<div class="section-title" style="text-align:left;float:left;width:100%;margin-bottom:0">
 						<span>what we do</span>
-						<p class="montserrat-text uppercase">creative &amp; digital</p>
+						<p class="poppins-text uppercase">creative &amp; digital</p>
 					</div>
 
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -112,7 +112,7 @@
 			<div class="row">
 				<div class="col-md-4 col-sm-6 col-xs-12 benefits_2_single wow fadeInUp">
 					<i class="icon ion-iphone"></i>
-					<span class="title montserrat-text uppercase">fully responsive</span>
+					<span class="title poppins-text uppercase">fully responsive</span>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 					quis nostrud exercitation. </p>
@@ -120,7 +120,7 @@
 
 				<div class="col-md-4 col-sm-6 col-xs-12 benefits_2_single wow fadeInUp" data-wow-delay=".1s">
 					<i class="icon ion-ios-infinite-outline"></i>
-					<span class="title montserrat-text uppercase">unlimited options</span>
+					<span class="title poppins-text uppercase">unlimited options</span>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 					quis nostrud exercitation. </p>
@@ -128,7 +128,7 @@
 
 				<div class="col-md-4 col-sm-6 col-xs-12 benefits_2_single wow fadeInUp" data-wow-delay=".2s">
 					<i class="icon ion-social-wordpress-outline"></i>
-					<span class="title montserrat-text uppercase">wordpress</span>
+					<span class="title poppins-text uppercase">wordpress</span>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 					quis nostrud exercitation. </p>
@@ -136,7 +136,7 @@
 
 				<div class="col-md-4 col-sm-6 col-xs-12 benefits_2_single wow fadeInUp" data-wow-delay=".3s">
 					<i class="icon ion-ios-cart-outline"></i>
-					<span class="title montserrat-text uppercase">e-commerce</span>
+					<span class="title poppins-text uppercase">e-commerce</span>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 					quis nostrud exercitation. </p>
@@ -144,7 +144,7 @@
 
 				<div class="col-md-4 col-sm-6 col-xs-12 benefits_2_single wow fadeInUp" data-wow-delay=".4s">
 					<i class="icon ion-ios-settings"></i>
-					<span class="title montserrat-text uppercase">customizable design</span>
+					<span class="title poppins-text uppercase">customizable design</span>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 					quis nostrud exercitation. </p>
@@ -152,7 +152,7 @@
 
 				<div class="col-md-4 col-sm-6 col-xs-12 benefits_2_single wow fadeInUp" data-wow-delay=".5s">
 					<i class="icon ion-settings"></i>
-					<span class="title montserrat-text uppercase">support</span>
+					<span class="title poppins-text uppercase">support</span>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 					quis nostrud exercitation. </p>
@@ -374,7 +374,7 @@
 		<div class="container">
 			<div class="col-md-6 col-sm-12">
 				<div class="row">
-					<span class="white-text montserrat-text uppercase" style="font-size:30px;display:block;">
+					<span class="white-text poppins-text uppercase" style="font-size:30px;display:block;">
 						you think we're cool? let's work together
 					</span>
 					<a href="#" class="btn black" style="margin-top:30px"><span>get in touch</span></a>
@@ -384,7 +384,7 @@
 			<div class="col-md-6 col-sm-12">
 				<div class="row">
 					<div class="Black-section" style="padding:20px">
-						<span class="montserrat-text uppercase" style="font-size:24px">stay informed with our newsletter</span>
+						<span class="poppins-text uppercase" style="font-size:24px">stay informed with our newsletter</span>
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 							tempor incididunt ut labore et dolore magna aliqua.
