--- a/Akad_Creative_Digital_Agency_Template/Akad_Creative_Digital_Agency_Template/portfolio-1.html
+++ b/Akad_Creative_Digital_Agency_Template/Akad_Creative_Digital_Agency_Template/portfolio-1.html
@@ -60,8 +60,8 @@
 	<!-- HERO SECTION  -->
 	<div class="site-hero_2">
 		<div class="page-title">
-			<div class="big-title montserrat-text uppercase">our work</div>
-			<div class="small-title montserrat-text uppercase">home / portfolio</div>
+			<div class="big-title poppins-text uppercase">our work</div>
+			<div class="small-title poppins-text uppercase">home / portfolio</div>
 		</div>
 	</div>
 
@@ -72,7 +72,7 @@
 			<!-- categories  -->
 			<div class="col-md-3">
 				<div class="row categories-grid wow fadeInLeft">
-					<span class="montserrat-text uppercase">choose category</span>
+					<span class="poppins-text uppercase">choose category</span>
 
 					<nav class="categories">
 						<ul class="portfolio_filter">
@@ -301,7 +301,7 @@
 		<div class="container">
 			<div class="col-md-6 col-sm-12">
 				<div class="row">
-					<span class="white-text montserrat-text uppercase" style="font-size:30px;display:block;">
+					<span class="white-text poppins-text uppercase" style="font-size:30px;display:block;">
 						you think we're cool? let's work together
 					</span>
 					<a href="#" class="btn black" style="margin-top:30px"><span>get in touch</span></a>
@@ -311,7 +311,7 @@
 			<div class="col-md-6 col-sm-12">
 				<div class="row">
 					<div class="Black-section" style="padding:20px">
-						<span class="montserrat-text uppercase" style="font-size:24px">stay informed with our newsletter</span>
+						<span class="poppins-text uppercase" style="font-size:24px">stay informed with our newsletter</span>
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 							tempor incididunt ut labore et dolore magna aliqua.
