--- a/Akad_Creative_Digital_Agency_Template/Akad_Creative_Digital_Agency_Template/services.html
+++ b/Akad_Creative_Digital_Agency_Template/Akad_Creative_Digital_Agency_Template/services.html
@@ -60,8 +60,8 @@
 	<!-- HERO SECTION  -->
 	<div class="site-hero_2">
 		<div class="page-title">
-			<div class="big-title montserrat-text uppercase">our services</div>
-			<div class="small-title montserrat-text uppercase">home / services</div>
+			<div class="big-title poppins-text uppercase">our services</div>
+			<div class="small-title poppins-text uppercase">home / services</div>
 		</div>
 	</div>
 
@@ -123,7 +123,7 @@
 				<div class="col-md-3 col-sm-6 col-xs-12 wow fadeInUp">
 					<div class="benefits_1_single">
 						<i class="icon ion-ios-pulse"></i>
-						<div class="title montserrat-text uppercase">keep pulse going</div>
+						<div class="title poppins-text uppercase">keep pulse going</div>
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 							tempor incididunt.
@@ -133,7 +133,7 @@
 				<div class="col-md-3 col-sm-6 col-xs-12 wow fadeInUp" data-wow-delay=".1s">
 					<div class="benefits_1_single">
 						<i class="icon ion-ios-infinite-outline"></i>
-						<div class="title montserrat-text uppercase">unlimited options</div>
+						<div class="title poppins-text uppercase">unlimited options</div>
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 							tempor incididunt.
@@ -143,7 +143,7 @@
 				<div class="col-md-3 col-sm-6 col-xs-12 wow fadeInUp" data-wow-delay=".2s">
 					<div class="benefits_1_single">
 						<i class="icon ion-ios-lightbulb-outline"></i>
-						<div class="title montserrat-text uppercase">great ideas</div>
+						<div class="title poppins-text uppercase">great ideas</div>
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 							tempor incididunt.
@@ -153,7 +153,7 @@
 				<div class="col-md-3 col-sm-6 col-xs-12 wow fadeInUp" data-wow-delay=".3s">
 					<div class="benefits_1_single">
 						<i class="icon ion-ios-settings"></i>
-						<div class="title montserrat-text uppercase">awesome support</div>
+						<div class="title poppins-text uppercase">awesome support</div>
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 							tempor incididunt.
@@ -177,8 +177,8 @@
 			<div class="row">
 				<div class="col-md-4 col-sm-6 col-xs-12 wow fadeInUp">
 					<div class="pricing_plan">
-						<div class="plan_title montserrat-text uppercase">basic</div>
-						<div class="plan_price montserrat-text uppercase">$35.99 monthly</div>
+						<div class="plan_title poppins-text uppercase">basic</div>
+						<div class="plan_price poppins-text uppercase">$35.99 monthly</div>
 						<ul class="list">
 							<li>Lorem ipsum dolor sit amet</li>
 							<li>Consectetuer adipiscing elit</li>
@@ -193,8 +193,8 @@
 
 				<div class="col-md-4 col-sm-6 col-xs-12 wow fadeInUp" data-wow-delay=".1s">
 					<div class="pricing_plan">
-						<div class="plan_title montserrat-text uppercase">advanced</div>
-						<div class="plan_price montserrat-text uppercase">$55.99 monthly</div>
+						<div class="plan_title poppins-text uppercase">advanced</div>
+						<div class="plan_price poppins-text uppercase">$55.99 monthly</div>
 						<ul class="list">
 							<li>Lorem ipsum dolor sit amet</li>
 							<li>Consectetuer adipiscing elit</li>
@@ -209,8 +209,8 @@
 
 				<div class="col-md-4 col-sm-6 col-xs-12 wow fadeInUp" data-wow-delay=".2s">
 					<div class="pricing_plan">
-						<div class="plan_title montserrat-text uppercase">smart</div>
-						<div class="plan_price montserrat-text uppercase">$75.99 monthly</div>
+						<div class="plan_title poppins-text uppercase">smart</div>
+						<div class="plan_price poppins-text uppercase">$75.99 monthly</div>
 						<ul class="list">
 							<li>Lorem ipsum dolor sit amet</li>
 							<li>Consectetuer adipiscing elit</li>
@@ -232,7 +232,7 @@
 		<div class="container">
 			<div class="col-md-6 col-sm-12">
 				<div class="row">
-					<span class="white-text montserrat-text uppercase" style="font-size:30px;display:block;">
+					<span class="white-text poppins-text uppercase" style="font-size:30px;display:block;">
 						you think we're cool? let's work together
 					</span>
 					<a href="#" class="btn black" style="margin-top:30px"><span>get in touch</span></a>
@@ -242,7 +242,7 @@
 			<div class="col-md-6 col-sm-12">
 				<div class="row">
 					<div class="Black-section" style="padding:20px">
-						<span class="montserrat-text uppercase" style="font-size:24px">stay informed with our newsletter</span>
+						<span class="poppins-text uppercase" style="font-size:24px">stay informed with our newsletter</span>
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 							tempor incididunt ut labore et dolore magna aliqua.
