--- a/Akad_Creative_Digital_Agency_Template/Akad_Creative_Digital_Agency_Template/single-post.html
+++ b/Akad_Creative_Digital_Agency_Template/Akad_Creative_Digital_Agency_Template/single-post.html
@@ -60,8 +60,8 @@
 	<!-- HERO SECTION  -->
 	<div class="site-hero_2">
 		<div class="page-title">
-			<div class="big-title montserrat-text uppercase">post title</div>
-			<div class="small-title montserrat-text uppercase">home / blog / single_post</div>
+			<div class="big-title poppins-text uppercase">post title</div>
+			<div class="small-title poppins-text uppercase">home / blog / single_post</div>
 		</div>
 	</div>
 
@@ -75,7 +75,7 @@
 							<img src="assets/img/post_1.jpg" alt="post image">
 						</div>
 						<div class="post_title">
-							<h4 class="montserrat-text uppercase">Duis aute irure dolor in reprehenderit.</h4>
+							<h4 class="poppins-text uppercase">Duis aute irure dolor in reprehenderit.</h4>
 							<span class="post_date">Date : 2012-03-11</span>
 						</div>
 						<p>
@@ -144,34 +144,34 @@
 								<div class="tab_single shown">
 									<div class="related_post">
 										<div class="thumb"><img src="assets/img/thumb.jpg" alt="image"></div>
-										<a href="" class="post_title montserrat-text uppercase">Magna mollis ultricies</a>
+										<a href="" class="post_title poppins-text uppercase">Magna mollis ultricies</a>
 										<div class="post_date">3th october 2015</div>
 									</div>
 									<div class="related_post">
 										<div class="thumb"><img src="assets/img/thumb.jpg" alt="image"></div>
-										<a href=""  class="post_title montserrat-text uppercase">Magna mollis ultricies</a>
+										<a href=""  class="post_title poppins-text uppercase">Magna mollis ultricies</a>
 										<div class="post_date">3th october 2015</div>
 									</div>
 									<div class="related_post">
 										<div class="thumb"><img src="assets/img/thumb.jpg" alt="image"></div>
-										<a href=""  class="post_title montserrat-text uppercase">Magna mollis ultricies</a>
+										<a href=""  class="post_title poppins-text uppercase">Magna mollis ultricies</a>
 										<div class="post_date">3th october 2015</div>
 									</div>
 								</div>
 								<div class="tab_single">
 									<div class="related_post">
 										<div class="thumb"><img src="assets/img/thumb.jpg" alt="image"></div>
-										<a href=""  class="post_title montserrat-text uppercase">Magna mollis ultricies</a>
+										<a href=""  class="post_title poppins-text uppercase">Magna mollis ultricies</a>
 										<div class="post_date">3th october 2015</div>
 									</div>
 									<div class="related_post">
 										<div class="thumb"><img src="assets/img/thumb.jpg" alt="image"></div>
-										<a href=""  class="post_title montserrat-text uppercase">Magna mollis ultricies</a>
+										<a href=""  class="post_title poppins-text uppercase">Magna mollis ultricies</a>
 										<div class="post_date">3th october 2015</div>
 									</div>
 									<div class="related_post">
 										<div class="thumb"><img src="assets/img/thumb.jpg" alt="image"></div>
-										<a href=""  class="post_title montserrat-text uppercase">Magna mollis ultricies</a>
+										<a href=""  class="post_title poppins-text uppercase">Magna mollis ultricies</a>
 										<div class="post_date">3th october 2015</div>
 									</div>
 								</div>
@@ -250,7 +250,7 @@
 		<div class="container">
 			<div class="col-md-6 col-sm-12">
 				<div class="row">
-					<span class="white-text montserrat-text uppercase" style="font-size:30px;display:block;">
+					<span class="white-text poppins-text uppercase" style="font-size:30px;display:block;">
 						you think we're cool? let's work together
 					</span>
 					<a href="#" class="btn black" style="margin-top:30px"><span>get in touch</span></a>
@@ -260,7 +260,7 @@
 			<div class="col-md-6 col-sm-12">
 				<div class="row">
 					<div class="Black-section" style="padding:20px">
-						<span class="montserrat-text uppercase" style="font-size:24px">stay informed with our newsletter</span>
+						<span class="poppins-text uppercase" style="font-size:24px">stay informed with our newsletter</span>
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 							tempor incididunt ut labore et dolore magna aliqua.
