--- a/Akad_Creative_Digital_Agency_Template/Akad_Creative_Digital_Agency_Template/single-project-2.html
+++ b/Akad_Creative_Digital_Agency_Template/Akad_Creative_Digital_Agency_Template/single-project-2.html
@@ -61,8 +61,8 @@
 	<!-- HERO SECTION  -->
 	<div class="site-hero_2">
 		<div class="page-title">
-			<div class="big-title montserrat-text uppercase">Project Title</div>
-			<div class="small-title montserrat-text uppercase">home / portfolio / single_project</div>
+			<div class="big-title poppins-text uppercase">Project Title</div>
+			<div class="small-title poppins-text uppercase">home / portfolio / single_project</div>
 		</div>
 	</div>
 
@@ -97,7 +97,7 @@
 						<li>Back end development</li>
 						<li>SEO</li>
 					</ul>
-					<h5 class="uppercase montserrat-text">share</h5>
+					<h5 class="uppercase poppins-text">share</h5>
 					<ul class="social-icons" style="margin-top:20px;">
 						<li><a href="javasript:void(0);" data-social="fb"><i class="icon ion-social-facebook"></i></a></li>
 						<li><a href="javasript:void(0);" data-social="tw"><i class="icon ion-social-twitter"></i></a></li>
@@ -116,7 +116,7 @@
 			<a href="" class="next"><i class="icon ion-arrow-right-c"></i></a>
 		</div>
 
-		<h5 class="montserrat-text uppercase" style="margin-bottom:50px">related projects</h5>
+		<h5 class="poppins-text uppercase" style="margin-bottom:50px">related projects</h5>
 		<div class="row">
 			<div class="related_projects">
 				<div class="col-md-3 col-sm-4 col-xs-6">
@@ -187,7 +187,7 @@
 		<div class="container">
 			<div class="col-md-6 col-sm-12">
 				<div class="row">
-					<span class="white-text montserrat-text uppercase" style="font-size:30px;display:block;">
+					<span class="white-text poppins-text uppercase" style="font-size:30px;display:block;">
 						you think we're cool? let's work together
 					</span>
 					<a href="#" class="btn black" style="margin-top:30px"><span>get in touch</span></a>
@@ -197,7 +197,7 @@
 			<div class="col-md-6 col-sm-12">
 				<div class="row">
 					<div class="Black-section" style="padding:20px">
-						<span class="montserrat-text uppercase" style="font-size:24px">stay informed with our newsletter</span>
+						<span class="poppins-text uppercase" style="font-size:24px">stay informed with our newsletter</span>
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 							tempor incididunt ut labore et dolore magna aliqua.
