--- a/Akad_Creative_Digital_Agency_Template/Akad_Creative_Digital_Agency_Template/blog-1.html
+++ b/Akad_Creative_Digital_Agency_Template/Akad_Creative_Digital_Agency_Template/blog-1.html
@@ -60,8 +60,8 @@
 	<!-- HERO SECTION  -->
 	<div class="site-hero_2">
 		<div class="page-title">
-			<div class="big-title montserrat-text uppercase">blog posts</div>
-			<div class="small-title montserrat-text uppercase">home / blog</div>
+			<div class="big-title poppins-text uppercase">blog posts</div>
+			<div class="small-title poppins-text uppercase">home / blog</div>
 		</div>
 	</div>
 
@@ -76,7 +76,7 @@
 							<img src="assets/img/post_1.jpg" alt="post image">
 						</div>
 						<div class="post_info">
-							<div class="post_date montserrat-text uppercase">january 13, 2016</div>
+							<div class="post_date poppins-text uppercase">january 13, 2016</div>
 							<i class="icon ion-chatbox-working"></i>
 							<span>8</span>
 							<i class="icon ion-ios-heart"></i>
@@ -85,7 +85,7 @@
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
 						</p>
-						<a href="single-post.html" class="link montserrat-text uppercase">continue reading <i class="icon ion-arrow-right-c"></i></a>
+						<a href="single-post.html" class="link poppins-text uppercase">continue reading <i class="icon ion-arrow-right-c"></i></a>
 					</div>
 					<!-- blog post -->
 					<div class="blog_post wow fadeInUp">
@@ -93,7 +93,7 @@
 							<iframe height="500" src="https://www.youtube.com/embed/1mO_QMYV-QE?list=PLXWu0OP8--WQZcdnx1OuIwQ2MEMT2ee8O" frameborder="0" allowfullscreen></iframe>
 						</div>
 						<div class="post_info">
-							<div class="post_date montserrat-text uppercase">january 13, 2016</div>
+							<div class="post_date poppins-text uppercase">january 13, 2016</div>
 							<i class="icon ion-chatbox-working"></i>
 							<span>8</span>
 							<i class="icon ion-ios-heart"></i>
@@ -102,7 +102,7 @@
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
 						</p>
-						<a href="single-post.html" class="link montserrat-text uppercase">continue reading <i class="icon ion-arrow-right-c"></i></a>
+						<a href="single-post.html" class="link poppins-text uppercase">continue reading <i class="icon ion-arrow-right-c"></i></a>
 					</div>
 					<!-- blog post -->
 					<div class="blog_post wow fadeInUp">
@@ -110,7 +110,7 @@
 							<iframe src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/51057943&amp;amp;color=ff5500&amp;amp;auto_play=false&amp;amp;hide_related=false&amp;amp;show_comments=true&amp;amp;show_user=true&amp;amp;show_reposts=false" frameborder="0"></iframe>
 						</div>
 						<div class="post_info">
-							<div class="post_date montserrat-text uppercase">january 13, 2016</div>
+							<div class="post_date poppins-text uppercase">january 13, 2016</div>
 							<i class="icon ion-chatbox-working"></i>
 							<span>8</span>
 							<i class="icon ion-ios-heart"></i>
@@ -119,7 +119,7 @@
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
 						</p>
-						<a href="single-post.html" class="link montserrat-text uppercase">continue reading <i class="icon ion-arrow-right-c"></i></a>
+						<a href="single-post.html" class="link poppins-text uppercase">continue reading <i class="icon ion-arrow-right-c"></i></a>
 					</div>
 
 					<!-- pagination -->
@@ -155,34 +155,34 @@
 								<div class="tab_single shown">
 									<div class="related_post">
 										<div class="thumb"><img src="assets/img/thumb.jpg" alt="image"></div>
-										<a href="" class="post_title montserrat-text uppercase">Magna mollis ultricies</a>
+										<a href="" class="post_title poppins-text uppercase">Magna mollis ultricies</a>
 										<div class="post_date">3th october 2015</div>
 									</div>
 									<div class="related_post">
 										<div class="thumb"><img src="assets/img/thumb.jpg" alt="image"></div>
-										<a href=""  class="post_title montserrat-text uppercase">Magna mollis ultricies</a>
+										<a href=""  class="post_title poppins-text uppercase">Magna mollis ultricies</a>
 										<div class="post_date">3th october 2015</div>
 									</div>
 									<div class="related_post">
 										<div class="thumb"><img src="assets/img/thumb.jpg" alt="image"></div>
-										<a href=""  class="post_title montserrat-text uppercase">Magna mollis ultricies</a>
+										<a href=""  class="post_title poppins-text uppercase">Magna mollis ultricies</a>
 										<div class="post_date">3th october 2015</div>
 									</div>
 								</div>
 								<div class="tab_single">
 									<div class="related_post">
 										<div class="thumb"><img src="assets/img/thumb.jpg" alt="image"></div>
-										<a href=""  class="post_title montserrat-text uppercase">Magna mollis ultricies</a>
+										<a href=""  class="post_title poppins-text uppercase">Magna mollis ultricies</a>
 										<div class="post_date">3th october 2015</div>
 									</div>
 									<div class="related_post">
 										<div class="thumb"><img src="assets/img/thumb.jpg" alt="image"></div>
-										<a href=""  class="post_title montserrat-text uppercase">Magna mollis ultricies</a>
+										<a href=""  class="post_title poppins-text uppercase">Magna mollis ultricies</a>
 										<div class="post_date">3th october 2015</div>
 									</div>
 									<div class="related_post">
 										<div class="thumb"><img src="assets/img/thumb.jpg" alt="image"></div>
-										<a href=""  class="post_title montserrat-text uppercase">Magna mollis ultricies</a>
+										<a href=""  class="post_title poppins-text uppercase">Magna mollis ultricies</a>
 										<div class="post_date">3th october 2015</div>
 									</div>
 								</div>
@@ -261,7 +261,7 @@
 		<div class="container">
 			<div class="col-md-6 col-sm-12">
 				<div class="row">
-					<span class="white-text montserrat-text uppercase" style="font-size:30px;display:block;">
+					<span class="white-text poppins-text uppercase" style="font-size:30px;display:block;">
 						you think we're cool? let's work together
 					</span>
 					<a href="#" class="btn black" style="margin-top:30px"><span>get in touch</span></a>
@@ -271,7 +271,7 @@
 			<div class="col-md-6 col-sm-12">
 				<div class="row">
 					<div class="Black-section" style="padding:20px">
-						<span class="montserrat-text uppercase" style="font-size:24px">stay informed with our newsletter</span>
+						<span class="poppins-text uppercase" style="font-size:24px">stay informed with our newsletter</span>
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 							tempor incididunt ut labore et dolore magna aliqua.
