--- a/Akad_Creative_Digital_Agency_Template/Akad_Creative_Digital_Agency_Template/contact.html
+++ b/Akad_Creative_Digital_Agency_Template/Akad_Creative_Digital_Agency_Template/contact.html
@@ -60,8 +60,8 @@
 	<!-- HERO SECTION  -->
 	<div class="site-hero_2">
 		<div class="page-title">
-			<div class="big-title montserrat-text uppercase">Contact us</div>
-			<div class="small-title montserrat-text uppercase">home / contact</div>
+			<div class="big-title poppins-text uppercase">Contact us</div>
+			<div class="small-title poppins-text uppercase">home / contact</div>
 		</div>
 	</div>
 
@@ -102,7 +102,7 @@
 						</form>
 					</div>
 
-					<h4 class="montserrat-text uppercase" style="margin-top:100px">contact info</h4>
+					<h4 class="poppins-text uppercase" style="margin-top:100px">contact info</h4>
 					<p>Lorem ipsum dolor sit amet, conse adipisicing elit. Libero incidunt quod ab mollitia quia dolorum conse.</p>
 					
 					<p>
@@ -137,7 +137,7 @@
 		<div class="container">
 			<div class="col-md-6 col-sm-12">
 				<div class="row">
-					<span class="white-text montserrat-text uppercase" style="font-size:30px;display:block;">
+					<span class="white-text poppins-text uppercase" style="font-size:30px;display:block;">
 						you think we're cool? let's work together
 					</span>
 					<a href="#" class="btn black" style="margin-top:30px"><span>get in touch</span></a>
@@ -147,7 +147,7 @@
 			<div class="col-md-6 col-sm-12">
 				<div class="row">
 					<div class="Black-section" style="padding:20px">
-						<span class="montserrat-text uppercase" style="font-size:24px">stay informed with our newsletter</span>
+						<span class="poppins-text uppercase" style="font-size:24px">stay informed with our newsletter</span>
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 							tempor incididunt ut labore et dolore magna aliqua.
