--- a/Akad_Creative_Digital_Agency_Template/Akad_Creative_Digital_Agency_Template/index.html
+++ b/Akad_Creative_Digital_Agency_Template/Akad_Creative_Digital_Agency_Template/index.html
@@ -63,13 +63,13 @@
 	<div class="site-hero">
 		<ul class="slides">
 			<li>
-				<div><span class="small-title uppercase montserrat-text">wichtig:</span></div>
-				<div class="big-title uppercase montserrat-text">Homepage Relaunch</div>
+				<div><span class="small-title uppercase poppins-text">wichtig:</span></div>
+				<div class="big-title uppercase poppins-text">Homepage Relaunch</div>
 				<p>Wir arbeiten momentan noch an unserer neuen Homepage. Keine Sorge, wir bleiben trotzdem jederzeit erreichbar! All unsere Kommunikationskanäle sind unten verlinkt!</p>
 			</li>
 			<li>
-				<div><span class="small-title uppercase montserrat-text">bis dahin:</span></div>
-				<div class="big-title uppercase montserrat-text">Stay Tuned!</div>
+				<div><span class="small-title uppercase poppins-text">bis dahin:</span></div>
+				<div class="big-title uppercase poppins-text">Stay Tuned!</div>
 				<p>Folge unseren Social-Media-Accounts um zu erfahren wann es soweit ist und kein wichtiges Update zu verpassen! </p>
 			</li>
 		</ul>
@@ -80,21 +80,19 @@
 		<div class="agency">
 			<div class="col-md-5 col-sm-12">
 				<div class="row">
-					<img src="assets/img/agency.jpg" alt="image">
+					<img src="assets/img/21-04-15%2016-08-17%200963.jpg" alt="image">
 				</div>
 			</div>
 			<div class="col-md-offset-1 col-md-6 col-sm-12">
 				<div class="row">
 					<div class="section-title">
-						<span>history of agency</span>
+						<span>Unser neues Studio</span>
 					</div>
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor nisi ut aliquip ex ea commodo
-						consequat. in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. 
+						Nicht nur die Homepage wird umgebaut: zur gleichen Zeit sind wir mit dem Umbau unseres Studios
+						beschäftigt! Auf 2 Etagen entsteht gerade ein kompaktes und multifunktionales Film- und Tonstudio,
+						mit Hohlkehle, high-end Beleuchtung und hochqualitativer Technik. Egal ob Livestreams, Fotos, Videos,
+						Virtual-Production, Schnitt oder Mixing- & Mastering - schaut vorbei und wir realisieren eure Ideen!
 					</p>
 					<a href="#" class="btn red" style="float:right;margin-top:30px"><span>read more</span></a>
 				</div>
@@ -108,9 +106,9 @@
 		<div class="container">
 			<div class="row">
 				<div class="section-title">
-					<span>why choose us</span>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua.</p>
+					<span>Deine Medienlösung</span>
+					<p>Egal ob Videocontent, Livestreams, 360°, 3D und VR-Projekte oder Webservices!
+						Wir kombinieren Know-how mit neuster Technologie für deine Medienlösung!</p>
 				</div>
 			</div>
 
@@ -118,25 +116,25 @@
 				<div class="row" style="margin-bottom:50px">
 					<div class="col-md-6 col-sm-12">
 						<div class="row">
-							<i class="icon ion-ios-infinite-outline"></i>
-							<span class="montserrat-text uppercase service-title">unlimited options</span>
+							<i class="icon ion-ios-infinite"></i>
+							<span class="poppins-text uppercase service-title">Geballtes Know-How</span>
 							<ul>
-								<li>branding</li>
-								<li>design &amp; copywriting</li>
-								<li>concept development</li>
-								<li>user experience</li>
+								<li>Audio- und Videoproduktion</li>
+								<li>Web- und Softwareentwicklung</li>
+								<li>Virtual Production</li>
+								<li>Livestreams</li>
+								<li>und vieles mehr!</li>
 							</ul>
 						</div>
 					</div>
 					<div class="col-md-6 col-sm-12">
 						<div class="row">
-							<i class="icon ion-ios-shuffle"></i>
-							<span class="montserrat-text uppercase service-title">design &amp; development</span>
+							<i class="icon ion-ios-monitor-outline"></i>
+							<span class="poppins-text uppercase service-title">Innovative Technologie</span>
 							<ul>
-								<li>branding</li>
-								<li>design &amp; copywriting</li>
-								<li>concept development</li>
-								<li>user experience</li>
+								<li>Leistungsstarke Rechner</li>
+								<li>Neue Kameras & Lichetechnik</li>
+								<li>Zukunftsfähige Konzepte</li>
 							</ul>
 						</div>
 					</div>
@@ -144,25 +142,23 @@
 				<div class="row">
 					<div class="col-md-6 col-sm-12">
 						<div class="row">
-							<i class="icon ion-ios-cart-outline"></i>
-							<span class="montserrat-text uppercase service-title">e-commerce</span>
+							<i class="icon ion-ios-people-outline"></i>
+							<span class="poppins-text uppercase service-title">Kreatives Team</span>
 							<ul>
-								<li>branding</li>
-								<li>design &amp; copywriting</li>
-								<li>concept development</li>
-								<li>user experience</li>
+								<li>Agile Teamkomposition</li>
+								<li>Raum für Ideenaustausch</li>
+								<li>Inspirierendes Arbeitsumfeld</li>
 							</ul>
 						</div>
 					</div>
 					<div class="col-md-6 col-sm-12">
 						<div class="row">
 							<i class="icon ion-ios-settings"></i>
-							<span class="montserrat-text uppercase service-title">customizable design</span>
+							<span class="poppins-text uppercase service-title">Individuelle Lösungen</span>
 							<ul>
-								<li>branding</li>
-								<li>design &amp; copywriting</li>
-								<li>concept development</li>
-								<li>user experience</li>
+								<li>Grenzenlose Möglichkeiten</li>
+								<li>Kombinierbare Möglichkeiten</li>
+								<li>Perfektionsanspruch</li>
 							</ul>
 						</div>
 					</div>
@@ -171,7 +167,7 @@
 
 			<div class="col-md-5 col-sm-12 services-right wow fadeInUp" data-wow-delay=".1s">
 				<div class="row">
-					<img src="assets/img/serv.jpg" alt="image">
+					<img src="assets/img/DSC05129%20-%20Kopie.jpg" alt="image">
 				</div>
 			</div>
 
@@ -184,7 +180,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="section-title">
-					<span>our portfolio</span>
+					<span>Unsere Services</span>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua.</p>
 				</div>
@@ -194,17 +190,17 @@
 			<!-- categories  -->
 			<div class="col-md-3">
 				<div class="row categories-grid wow fadeInLeft">
-					<span class="montserrat-text uppercase">choose category</span>
+					<span class="poppins-text uppercase">Kernbereiche</span>
 
 					<nav class="categories">
 						<ul class="portfolio_filter">
-							<li><a href="" class="active" data-filter="*">all</a></li>
-							<li><a href="" data-filter=".photography">photography</a></li>
-							<li><a href="" data-filter=".web">webdesign</a></li>
-							<li><a href="" data-filter=".logo">logo</a></li>
-							<li><a href="" data-filter=".graphics">graphics</a></li>
-							<li><a href="" data-filter=".ads">advertising</a></li>
-							<li><a href="" data-filter=".fashion">fashion</a></li>
+							<li><a href="" class="active" data-filter="*">kein Filter</a></li>
+							<li><a href="" data-filter=".content">Contentproduktion</a></li>
+							<li><a href="" data-filter=".web">Web- und Softwareentwicklung</a></li>
+							<li><a href="" data-filter=".live">Livestream</a></li>
+							<li><a href="" data-filter=".360">360° und Virtuelle Touren</a></li>
+							<li><a href="" data-filter=".marketing">Kreativ- und Marketinglösungen</a></li>
+							<li><a href="" data-filter=".vr">Virtual-Production</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -352,28 +348,34 @@
 		<div class="container">
 			<div class="col-md-6 col-sm-12">
 				<div class="row">
-					<span class="white-text montserrat-text uppercase" style="font-size:30px;display:block;">
-						you think we're cool? let's work together
+					<span class="dark-text poppins-text uppercase" style="font-size:26px; font-weight: 600; display:block;">
+						Komm vorbei oder schreib uns!
 					</span>
-					<a href="#" class="btn black" style="margin-top:30px"><span>get in touch</span></a>
+					<p class="dark-text" style="font-size:20px; margin-top: 5px;">VFX-Studios <br>
+					Riedwiesenweg 8 <br>
+						89081 Ulm <br> <br>
+					Tel: +49(0) 163 - 9664786 <br>
+					Mail: info@vir2al-fx.de </p>
+					<a href="info@vir2al-fx.de" class="btn black" style="margin-top:30px"><span>Mail schreiben</span></a>
 				</div>
 			</div>
 
 			<div class="col-md-6 col-sm-12">
 				<div class="row">
-					<div class="Black-section" style="padding:20px">
-						<span class="montserrat-text uppercase" style="font-size:24px">stay informed with our newsletter</span>
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-							tempor incididunt ut labore et dolore magna aliqua.
-						</p>
-						<form action="#" method="post">
-							<div class="input_1">
-								<input type="text" name="email">
-								<span>your email</span>
-							</div>
-							<button type="submit" class="btn red" style="margin-top:20px"><span>send</span></button>
-						</form>
+					<div style="margin-top: 20px; margin-left: 250px;">
+						<span class="dark-text poppins-text uppercase" style="font-size:24px; font-weight: 500;">Vir2al Fx</span>
+						<ul class="dark-text" style="font-size:24px; font-weight: 500; font-style: normal; list-style-type: none; padding: 15px 5px;">
+							<li><a id="social-dark" href="https://www.facebook.com/vir2alfx/"><i class="icon ion-social-facebook"></i> Facebook</a></li>
+							<li><a id="social-dark" href="https://www.linkedin.com/company/vir2al-fx"><i class="icon ion-social-linkedin"></i> LinkedIn</a></li>
+							<li><a id="social-dark" href="https://www.instagram.com/vir2alfx/"><i class="icon ion-social-instagram"></i> Instagram</a></li>
+						</ul>
+					</div>
+					<div style="margin-top: 20px; margin-left: 250px;">
+						<span class="dark-text poppins-text uppercase" style="font-size:24px; font-weight: 500;">Vir2al Fx</span>
+						<ul class="dark-text" style="font-size:24px; font-weight: 500; font-style: normal; list-style-type: none; padding: 15px 5px;">
+							<li><a id="social-dark" href="https://www.facebook.com/vfxstudiosulm"><i class="icon ion-social-facebook"></i> Facebook</a></li>
+							<li><a id="social-dark" href="https://www.instagram.com/vfxstudios_ulm/"><i class="icon ion-social-instagram"></i> Instagram</a></li>
+						</ul>
 					</div>
 				</div>
 			</div>
@@ -406,9 +408,10 @@
 					</div>
 					<ul class="social-icons" style="margin-top:30px;float:right">
 						<li><a href="#"><i class="icon ion-social-facebook"></i></a></li>
+						<li><a href="#"><i class="icon ion-social-linkedin"></i></a></li>
+						<li><a href="#"><i class="icon ion-social-instagram"></i></a></li>
 						<li><a href="#"><i class="icon ion-social-twitter"></i></a></li>
 						<li><a href="#"><i class="icon ion-social-youtube"></i></a></li>
-						<li><a href="#"><i class="icon ion-social-linkedin"></i></a></li>
 						<li><a href="#"><i class="icon ion-social-pinterest"></i></a></li>
 						<li><a href="#"><i class="icon ion-social-instagram"></i></a></li>
 					</ul>
