--- a/Akad_Creative_Digital_Agency_Template/Akad_Creative_Digital_Agency_Template/index.html
+++ b/Akad_Creative_Digital_Agency_Template/Akad_Creative_Digital_Agency_Template/index.html
@@ -365,16 +365,16 @@
 					<div style="margin-top: 20px; margin-left: 250px;">
 						<span class="dark-text poppins-text uppercase" style="font-size:24px; font-weight: 500;">Vir2al Fx</span>
 						<ul class="dark-text" style="font-size:24px; font-weight: 500; font-style: normal; list-style-type: none; padding: 15px 5px;">
-							<li><a id="social-dark" href="https://www.facebook.com/vir2alfx/"><i class="icon ion-social-facebook"></i> Facebook</a></li>
-							<li><a id="social-dark" href="https://www.linkedin.com/company/vir2al-fx"><i class="icon ion-social-linkedin"></i> LinkedIn</a></li>
-							<li><a id="social-dark" href="https://www.instagram.com/vir2alfx/"><i class="icon ion-social-instagram"></i> Instagram</a></li>
+							<li><a class="social-dark" href="https://www.facebook.com/vir2alfx/"><i class="icon ion-social-facebook"></i> Facebook</a></li>
+							<li><a class="social-dark" href="https://www.linkedin.com/company/vir2al-fx"><i class="icon ion-social-linkedin"></i> LinkedIn</a></li>
+							<li><a class="social-dark" href="https://www.instagram.com/vir2alfx/"><i class="icon ion-social-instagram"></i> Instagram</a></li>
 						</ul>
 					</div>
 					<div style="margin-top: 20px; margin-left: 250px;">
 						<span class="dark-text poppins-text uppercase" style="font-size:24px; font-weight: 500;">Vir2al Fx</span>
 						<ul class="dark-text" style="font-size:24px; font-weight: 500; font-style: normal; list-style-type: none; padding: 15px 5px;">
-							<li><a id="social-dark" href="https://www.facebook.com/vfxstudiosulm"><i class="icon ion-social-facebook"></i> Facebook</a></li>
-							<li><a id="social-dark" href="https://www.instagram.com/vfxstudios_ulm/"><i class="icon ion-social-instagram"></i> Instagram</a></li>
+							<li><a class="social-dark" href="https://www.facebook.com/vfxstudiosulm"><i class="icon ion-social-facebook"></i> Facebook</a></li>
+							<li><a class="social-dark" href="https://www.instagram.com/vfxstudios_ulm/"><i class="icon ion-social-instagram"></i> Instagram</a></li>
 						</ul>
 					</div>
 				</div>
