-googlemaps api ging kurz dann nimmer, pls help- errorfixed

--- a/Akad_Creative_Digital_Agency_Template/Akad_Creative_Digital_Agency_Template/index.html
+++ b/Akad_Creative_Digital_Agency_Template/Akad_Creative_Digital_Agency_Template/index.html
@@ -9,6 +9,7 @@
 	<meta name="author" content="Amine Akhouad">
 	<meta name="description" content="AKAD is a creative and modern template for digital agencies">
 
+
 	<!-- STYLES -->
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 	<link rel="stylesheet" href="assets/css/ionicons.min.css">
@@ -358,11 +359,12 @@
 					Mail: info@vir2al-fx.de </p>
 					<a href="info@vir2al-fx.de" class="btn black" style="margin-top:30px"><span>Mail schreiben</span></a>
 				</div>
+				<iframe width="500" height=350 style="margin: -50px 50%; border:0" loading="lazy" allowfullscreen src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJw3A5QE5kmUcRQnvmsdwtWKY&key=AIzaSyA-aETpyN_pLc7JZktHScqGFuiFalc9HrU300"></iframe>
 			</div>
 
 			<div class="col-md-6 col-sm-12">
 				<div class="row">
-					<div style="margin-top: 20px; margin-left: 250px;">
+					<div style="margin-top: 20px; margin-left: 300px;">
 						<span class="dark-text poppins-text uppercase" style="font-size:24px; font-weight: 500;">Vir2al Fx</span>
 						<ul class="dark-text" style="font-size:24px; font-weight: 500; font-style: normal; list-style-type: none; padding: 15px 5px;">
 							<li><a class="social-dark" href="https://www.facebook.com/vir2alfx/"><i class="icon ion-social-facebook"></i> Facebook</a></li>
@@ -370,7 +372,7 @@
 							<li><a class="social-dark" href="https://www.instagram.com/vir2alfx/"><i class="icon ion-social-instagram"></i> Instagram</a></li>
 						</ul>
 					</div>
-					<div style="margin-top: 20px; margin-left: 250px;">
+					<div style="margin-top: 20px; margin-left: 300px;">
 						<span class="dark-text poppins-text uppercase" style="font-size:24px; font-weight: 500;">Vir2al Fx</span>
 						<ul class="dark-text" style="font-size:24px; font-weight: 500; font-style: normal; list-style-type: none; padding: 15px 5px;">
 							<li><a class="social-dark" href="https://www.facebook.com/vfxstudiosulm"><i class="icon ion-social-facebook"></i> Facebook</a></li>
