--- a/Akad_Creative_Digital_Agency_Template/Akad_Creative_Digital_Agency_Template/index.html
+++ b/Akad_Creative_Digital_Agency_Template/Akad_Creative_Digital_Agency_Template/index.html
@@ -181,9 +181,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="section-title">
-					<span>Unsere Services</span>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua.</p>
+					<span>Services</span>
+					<p>Unsere Kernbereiche im überblick</p>
 				</div>
 			</div>
 				
@@ -191,7 +190,7 @@
 			<!-- categories  -->
 			<div class="col-md-3">
 				<div class="row categories-grid wow fadeInLeft">
-					<span class="poppins-text uppercase">Kernbereiche</span>
+					<span class="poppins-text uppercase">Services</span>
 
 					<nav class="categories">
 						<ul class="portfolio_filter">
@@ -373,7 +372,7 @@
 						</ul>
 					</div>
 					<div style="margin-top: 20px; margin-left: 300px;">
-						<span class="dark-text poppins-text uppercase" style="font-size:24px; font-weight: 500;">Vir2al Fx</span>
+						<span class="dark-text poppins-text uppercase" style="font-size:24px; font-weight: 500;">VFX Studios</span>
 						<ul class="dark-text" style="font-size:24px; font-weight: 500; font-style: normal; list-style-type: none; padding: 15px 5px;">
 							<li><a class="social-dark" href="https://www.facebook.com/vfxstudiosulm"><i class="icon ion-social-facebook"></i> Facebook</a></li>
 							<li><a class="social-dark" href="https://www.instagram.com/vfxstudios_ulm/"><i class="icon ion-social-instagram"></i> Instagram</a></li>
@@ -405,9 +404,6 @@
 
 			<div class="col-md-4 col-sm-12" style="text-align:right">
 				<div class="row">
-					<div class="uppercase gray-text">
-						created by akhouad &copy;2016. all rights reserved.
-					</div>
 					<ul class="social-icons" style="margin-top:30px;float:right">
 						<li><a href="#"><i class="icon ion-social-facebook"></i></a></li>
 						<li><a href="#"><i class="icon ion-social-linkedin"></i></a></li>
