-minor text corrections-

--- a/Akad_Creative_Digital_Agency_Template/Akad_Creative_Digital_Agency_Template/index.html
+++ b/Akad_Creative_Digital_Agency_Template/Akad_Creative_Digital_Agency_Template/index.html
@@ -182,7 +182,7 @@
 			<div class="row">
 				<div class="section-title">
 					<span>Services</span>
-					<p>Unsere Kernbereiche im überblick</p>
+					<p>Unsere Kernbereiche im Überblick</p>
 				</div>
 			</div>
 				
