--- a/Akad_Creative_Digital_Agency_Template/Akad_Creative_Digital_Agency_Template/index.html
+++ b/Akad_Creative_Digital_Agency_Template/Akad_Creative_Digital_Agency_Template/index.html
@@ -99,7 +99,7 @@
                     Videos,
                     Virtual-Production, Schnitt oder Mixing- & Mastering - schaut vorbei und wir realisieren eure Ideen!
                 </p>
-                <a href="#" class="btn red" style="float:right;margin-top:30px"><span>read more</span></a>
+                <a href="mailto:info@vir2al-fx.de" class="btn red" style="float:right;margin-top:30px"><span>Kontakt</span></a>
             </div>
         </div>
     </div>
